# choir-performer

conductor/: justfile  pubspec.yaml
conductor/.VSCodeCounter/2023-01-09_12-58-00/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
conductor/.VSCodeCounter/2023-01-10_15-18-48/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
conductor/.VSCodeCounter/2023-01-10_15-19-07/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
conductor/lib/: main.dart
conductor/lib/native/: .gitignore  bridge_generated.dart  native.dart  speaker.dart
conductor/lib/util/: stream.dart
conductor/lib/views/: app.dart  discovery.dart
conductor/linux/: CMakeLists.txt
conductor/macos/Runner/: bridge_generated.h
conductor/macos/Runner.xcodeproj/: project.pbxproj
conductor/macos/Runner/Configs/: AppInfo.xcconfig
conductor/native/: Cargo.toml
conductor/native/src/: .gitignore  api.rs  bridge_generated.io.rs  bridge_generated.rs
conductor/windows/: CMakeLists.txt
conductor/windows/runner/: Runner.rc  main.cpp
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  proto.rs  speaker.rs  transport.rs
rust/src/proto/: message.proto
tenor/: Cargo.toml
tenor/src/: main.rs
