[package]
name = "choir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# audio
rodio = { version = "0.16", features = [ "symphonia-all" ] }

# net
tokio = { version = "1", features = ["full"] } # todo restrict to necessary
tokio-tungstenite = { version = "0.18", features = [ "rustls" ] }
futures = "0.3"

# data
prost = "0.11"
prost-types = "0.11"
bytes = "1.3"

# misc
anyhow = "1"
chrono = "0.4"

[build-dependencies]
prost-build = "0.11"

[profile.release]
lto = true
codegen-units = 1