[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tungstenite = { version = "0.18", features = [ "rustls" ] }

# ffi
flutter_rust_bridge = "1"
anyhow = "1"

# misc
chrono = "0.4"
futures = "0.3"
url = "2.3"

# dev
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1